--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    /* border: 2px solid red; */    
 }
 
 button {
@@ -30,6 +29,10 @@ aside {
     min-width: 260px;
     max-width: 999px;
     height: calc(100% - 21px);
+}
+    
+.aside {
+    margin-top: 7px;
     position: relative;
     margin-left: 7px ;
 }
@@ -37,7 +40,6 @@ aside {
 /* Top left home box */
 
 .top-left {
-    margin-top: 7px;
     width: 100%;
     height: 100px;
     background-color: #181818;
@@ -72,7 +74,6 @@ aside {
     height: calc(100% - 100px);
     border-radius: 10px;
     background-color: #181818;
-    /* background-color: rgb(255, 140, 0); */
 }
 
 /* Your library line */
@@ -260,6 +261,16 @@ li button:hover {
     width: 1px;
     background-color: #8a8a8a;
 }
+
+/* left Side Sub Aside */
+
+/* .collapsed-aside {
+    display: none;
+    width: 5vw;
+    background-color: #181818;
+    border-radius: 10px;
+    height: calc(100% - 14px);
+} */
 
 /* Fixed bottom current music play controls */
 
